Fix box too cramp on smaller screens

--- a/src/app.css
+++ b/src/app.css
@@ -292,7 +292,6 @@ a.hashtag {
   max-width: 100vw;
   text-align: center;
   padding: 16px;
-  margin: 16px;
   background-color: var(--bg-color);
   border-radius: 8px;
   border: 1px solid var(--divider-color);
